refactor MethodRecursiveDescent.java and pom.xml